using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isTouchingWall = "isTouchingWall";
    internal static string isTouchingCeiling = "isTouchingCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string targetInRange = "targetInRange";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockMovement = "lockMovement";
    internal static string attackCooldown = "attackCooldown";
    internal static string fireSpellTrigger = "fireSpell";
    internal static string spellHitTrigger = "spellHit";
    internal static string miniMageTrigger = "summonMiniMage";
    internal static string lightningStrikeTrigger = "lightningStrikeSpell";
    internal static string burnBoxTrigger = "burnBoxTrigger";
}
